vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__protected_type_declaration-3.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::type_declaration,\n\"\\\ntype foo is protected\n  procedure proc;\n  function fun return ret;\nend protected;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'foo'
  Keyword(Is)
  ProtectedTypeDeclaration
    ProtectedPreamble
      Keyword(Protected)
    ProtectedTypeDeclarativePart
      SubprogramDeclaration
        ProcedureSpecification
          Keyword(Procedure)
          Identifier 'proc'
        SemiColon
      SubprogramDeclaration
        FunctionSpecification
          Keyword(Function)
          Identifier 'fun'
          Keyword(Return)
          Name
            NameDesignatorPrefix
              Identifier 'ret'
        SemiColon
    ProtectedTypeDeclarationEpilogue
      Keyword(End)
      Keyword(Protected)
  SemiColon
